# marathon-market-prototype

./: .gitignore  CLAUDE.md  README.md  charts.py  marathon_market.py  marathon_market_console.py  marathon_market_tui.py  marathon_market_tui.tcss  outcomes_design.md  pyproject.toml  runner_design.md  squad_analysis.py  yield_design.md
ai_tree/: __init__.py  composites.py  context.py  leaf_authoring.py  publisher.py  registry.py  runtime.py  server.py  trace.py
ai_tree_editor/: index.html
ai_tree_editor/css/: editor.css
ai_tree_editor/js/: api.js  bt-nodes.js  editor.js  modals.js  serialize.js
ai_trees/: manifest.json
ai_trees/drafts/: encounter_balanced.json  encounter_cautious.xml  encounter_greedy.json  (+8 more)
data/: items.csv  zones.csv
docs/: ai_tree.md  ai_tree_authoring.md  combat_ideas.md  economy.md  eff_combat_calculation.md  future_design.md  marathon_market_prototype_spec.md  outcomes_design.md  runner_lifecycle.md  strategy_status.md  tuning_levers.md  yield_design.md  zone_sim_walkthrough.md
runner_sim/: __init__.py  __main__.py  encounters.py  harness.py  runners.py  shells.py
scripts/: check_price_movement.py  migrate_to_json.py  pool_size_sweep.py  publish_tree.py  zone_loot_analysis.py
tests/: test_ai_conditions.py  test_ai_tree_parity.py  test_ai_tree_publisher.py  test_ai_tree_registry.py  test_ai_tree_runtime.py  test_ai_tree_server.py  test_ai_tree_trace.py  test_company_memory.py  test_company_strategy.py  test_deployment.py  test_leaf_authoring.py  test_pricing.py  test_roster.py  test_shell_market.py  test_week.py  test_zone_sim.py
(+31 files in other folders)
