[project]
name = "marathon-market"
version = "0.1.0"
description = "Marathon Market Simulator — Python prototype"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
